@@ -1,0 +1,9 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2015-02-04T18:04:51Z"
+ content="""
+Please report bugs at [[bugs]], not in the forum.
+
+I've fixed this one.
+"""]]
