@@ -30,6 +30,7 @@ git-annex (5.20150114) UNRELEASED; urgency=medium
     annex.tune.branchhash1.
   * Remove support for building without cryptohash.
   * Added MD5 and MD5E backends.
+  * assistant: Fix local pairing when ssh pubkey comment contains spaces.
 
  -- Joey Hess <id@joeyh.name>  Tue, 13 Jan 2015 17:03:39 -0400
 
